--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -46,16 +46,17 @@ html {
   align-items: center; }
 
 .about-us__description-container {
-  width: 100%;
-  padding: 2rem; }
+  width: 100%; }
 
 .about-us__header {
-  font-size: var(--font-2-6); }
+  font-size: var(--font-2-6);
+  padding-left: 2rem; }
 
 .about-us__base-text {
   font-size: var(--font-1-6);
   line-height: var(--line-150);
-  margin-top: 1.1rem; }
+  margin-top: 1.1rem;
+  padding-left: 2rem; }
 
 .about-us__services {
   width: 100%;
@@ -85,10 +86,12 @@ html {
 
 .about-us__fleet {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin-top: 3rem; }
 
 .about-us-fleet__description {
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 2rem; }
 
 .about-us-fleet_car-container {
   width: 100%;
@@ -99,6 +102,12 @@ html {
     width: 67%;
     max-width: 1280px;
     padding: 2rem 0 8rem 0; }
+
+  .about-us__header {
+    padding-left: 0; }
+
+  .about-us__base-text {
+    padding-left: 0; }
 
   .about-us__services {
     width: 67%;
@@ -117,11 +126,13 @@ html {
     width: 67%;
     max-width: 1280px;
     flex-direction: row;
-    padding-top: 80px;
-    padding-bottom: 80px; }
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    margin-top: 0; }
 
   .about-us-fleet__description {
-    width: 50%; }
+    width: 50%;
+    padding-bottom: 0; }
 
   .about-us-fleet_car-container {
     min-height: 250px;
