Move ReservationForm container from Pages containers to App.js .

--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -46,7 +46,7 @@ html {
   align-items: center; }
 
 .about-us__description-container {
-  width: 100%; }
+  display: none; }
 
 .about-us__header {
   font-size: var(--font-2-6);
@@ -99,6 +99,7 @@ html {
 
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
+    display: block;
     width: 67%;
     max-width: 1280px;
     padding: 2rem 0 8rem 0; }
