--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,7 +15,6 @@
     display: none; }
 
   .desktop {
-    display: flex;
-    flex-direction: column; } }
+    display: flex; } }
 
 /*# sourceMappingURL=app.css.map */
