--- a/src/css/main.css
+++ b/src/css/main.css
@@ -232,8 +232,7 @@ html {
     display: none; }
 
   .desktop {
-    display: flex;
-    flex-direction: column; } }
+    display: flex; } }
 .home {
   position: relative;
   width: 100%;
@@ -391,7 +390,7 @@ html {
   align-items: center; }
 
 .about-us__description-container {
-  width: 100%; }
+  display: none; }
 
 .about-us__header {
   font-size: var(--font-2-6);
@@ -444,6 +443,7 @@ html {
 
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
+    display: block;
     width: 67%;
     max-width: 1280px;
     padding: 2rem 0 8rem 0; }
