--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,4 +18,5 @@
 @import 'components/Top';
 @import 'components/ReservationForm';
 @import 'components/Mission';
+@import 'components/MissionMobile';
 @import 'components/Footer';
