--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -3,18 +3,21 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  margin-top: 3rem; }
 
 .contact-us__contact-us-content {
   width: 100%; }
 
 .contact-us__header {
   font-size: var(--font-2-6);
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  margin-left: 2rem; }
 
 .contact-us__info {
   line-height: var(--line-150);
-  font-size: var(--font-2-6); }
+  font-size: var(--font-2-6);
+  margin-left: 2rem; }
 
 .contact-us__info-header {
   color: #9E9E9E; }
@@ -80,11 +83,20 @@
   background-color: transparent; }
 
 @media only screen and (min-width: 1024px) {
+  .contact-us {
+    margin-top: 0; }
+
   .contact-us__contact-us-content {
     width: 67%;
     max-width: 1280px;
     padding-top: 2rem;
     padding-bottom: 80px; }
+
+  .contact-us__header {
+    margin-left: 0; }
+
+  .contact-us__info {
+    margin-left: 0; }
 
   .contact-us__contact-form {
     padding: 4rem;
