--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -1,49 +1,10 @@
-:root {
-  --color-description: #9E9E9E;
-  --color-button: #1F1D1D;
-  --color-base: #000080;
-  --color-red: #DF2C21;
-  --color-blue: #80B9CD;
-  --color-light-blue: #E3F2F8;
-  --color-green: #4DDC40;
-  --color-footer: #232121;
-  --color-white: #FFFFFF;
-  --color-black: #000000;
-  --color-input-border: #D1D1D1;
-  --color-input-background: #F6F6F6;
-  --color-input-label: #535353;
-  --font-16: 16px;
-  --font-22: 22px;
-  --font-26: 26px;
-  --font-32: 32px;
-  --font-44: 44px;
-  --font-1: 1rem;
-  --font-1-3: 1.3rem;
-  --font-1-6: 1.6rem;
-  --font-1-8: 1.8rem;
-  --font-2: 2rem;
-  --font-2-2: 2.2rem;
-  --font-2-6: 2.6rem;
-  --font-3-2: 3.2rem;
-  --font-4-4: 4.4rem;
-  --line-120: 120%;
-  --line-150: 150%; }
-
-html {
-  font-size: 62.5%; }
-
-.mb-16 {
-  margin-bottom: 16px; }
-
-.mb-45 {
-  margin-bottom: 45px; }
-
 .about-us {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  margin-top: 3rem; }
 
 .about-us__description-container {
   display: none; }
@@ -98,6 +59,9 @@ html {
   background-color: var(--color-blue); }
 
 @media only screen and (min-width: 1024px) {
+  .about-us {
+    margin-top: 0; }
+
   .about-us__description-container {
     display: block;
     width: 67%;
