--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -1,11 +1,10 @@
-@import '../placeholders.scss';
-
 .about-us {
     position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 3rem;
 }
 
 .about-us__description-container {
@@ -71,6 +70,10 @@
 }
 
 @media only screen and (min-width: 1024px) {
+    .about-us {
+        margin-top: 0;
+    }
+
     .about-us__description-container {
         display: block;
         width: 67%;
