--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -56,7 +56,19 @@
 
 .about-us-fleet_car-container {
   width: 100%;
-  background-color: var(--color-blue); }
+  background-color: var(--color-blue);
+  position: relative;
+  height: 157px;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.about-us-fleet__car-img {
+  position: absolute;
+  bottom: -3rem;
+  width: 90%; }
 
 @media only screen and (min-width: 1024px) {
   .about-us {
@@ -102,12 +114,12 @@
   .about-us-fleet_car-container {
     min-height: 250px;
     width: 50%;
-    position: relative; }
+    height: auto;
+    margin-top: 0;
+    margin-bottom: 0; }
 
   .about-us-fleet__car-img {
-    position: absolute;
     right: 4rem;
-    bottom: -3rem;
     width: 115%;
     height: auto; }
 
