--- a/src/css/components/ReservationForm.scss
+++ b/src/css/components/ReservationForm.scss
@@ -1,6 +1,6 @@
 .reservation-form {
-    display: grid;
-    grid-template-columns: 1fr;
+    // display: grid;
+    // grid-template-columns: 1fr;
     width: 100%;
     max-width: 1280px;
     margin-top: 8rem;
@@ -10,11 +10,11 @@
     display: none;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
     .reservation-form {
         width: 67%;
         max-width: 1280px;
-        margin-top: 17rem;
+        margin-top: 40vh;
     }
 
     .step-one__car-photo-container {
