--- a/src/css/main.css
+++ b/src/css/main.css
@@ -612,19 +612,21 @@ html {
   font-size: var(--font-2-6); }
 
 .reservation-form__step-one {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
   width: 100%;
-  max-width: 1280px; }
+  max-width: 1280px;
+  align-items: center;
+  justify-content: center; }
 
 .step-one__car-photo-container {
-  display: none; }
+  display: none;
+  width: 55%; }
 
 .step-one__form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  width: 45%;
+  margin-right: 2%;
   position: relative;
+  margin-top: -130px;
   padding: 16px;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
@@ -656,7 +658,7 @@ html {
   padding: 1.6rem 2rem;
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
-  font-size: var(--font-1-6);
+  font-size: 15px;
   background-color: var(--color-input-background); }
 
 .reservation-form__input--no-margin {
@@ -671,7 +673,7 @@ html {
 
 .reservation-form__submit-text {
   color: var(--color-white);
-  font-size: var(--font-1-6); }
+  font-size: 12px; }
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
@@ -681,19 +683,14 @@ html {
     margin-top: 0; }
 
   .reservation-form__submit-text {
-    font-size: var(--font-2);
+    font-size: 15px;
     white-space: nowrap; } }
 @media only screen and (min-width: 768px) {
   .reservation-form__triangle {
     display: block; } }
-@media only screen and (min-width: 1024px) {
-  .reservation-form__step-one {
-    grid-template-columns: 1fr 1.5fr;
-    grid-gap: 50px; }
-
-  .step-one__car-photo-container {
-    display: block;
-    width: 100%; } }
+@media only screen and (max-width: 768px) {
+  .step-one__form {
+    margin-top: 0; } }
 .reservation-form__step-two {
   display: grid;
   background-color: var(--color-white); }
@@ -1156,15 +1153,13 @@ html {
   max-height: 250px;
   max-width: 100%; }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
   .top {
     height: 60vh; }
 
   .top__car-image {
     display: none; } }
 .reservation-form {
-  display: grid;
-  grid-template-columns: 1fr;
   width: 100%;
   max-width: 1280px;
   margin-top: 8rem; }
@@ -1172,11 +1167,11 @@ html {
 .step-one__car-photo-container {
   display: none; }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
   .reservation-form {
     width: 67%;
     max-width: 1280px;
-    margin-top: 17rem; }
+    margin-top: 40vh; }
 
   .step-one__car-photo-container {
     display: block;
