--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -1,24 +1,27 @@
 .reservation-form__step-one {
-    display: grid;
-    grid-template-columns: 1fr;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-start;
+    // display: grid;
+    // grid-template-columns: 1fr;
+    display: flex;
     width: 100%;
     max-width: 1280px;
+    align-items: center;
+    justify-content: center;
 }
 
 .step-one__car-photo-container {
     display: none;
     // width: 500px;
     // margin-left: 50px;
+    width: 55%;
 }
 
 .step-one__form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    // display: flex;
+    // flex-direction: column;
+    width: 45%;
+    margin-right: 2%;
     position: relative;
+    margin-top: -130px;
     // left: 320px;
     // top: 300px;
     padding: 16px;
@@ -64,7 +67,7 @@
     padding: 1.6rem 2rem;
     margin-bottom: 1rem;
     border: 1px solid var(--color-input-border);
-    font-size: var(--font-1-6);
+    font-size: 15px;
     background-color: var(--color-input-background);
 }
 
@@ -82,7 +85,7 @@
 
 .reservation-form__submit-text {
     color: var(--color-white);
-    font-size: var(--font-1-6);
+    font-size: 12px;
 }
 
 @media only screen and (min-width: 400px) {
@@ -96,7 +99,7 @@
     }
 
     .reservation-form__submit-text {
-        font-size: var(--font-2);
+        font-size: 15px;
         white-space: nowrap;
     }
 }
@@ -113,20 +116,28 @@
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .step-one__form {
+        margin-top: 0;
+    }
+}
+
+
+
 @media only screen and (min-width: 1024px) {
     .reservation-form__step-one {
         // position: absolute;
         // top: 25vh;
-        grid-template-columns: 1fr 1.5fr;
-        grid-gap: 50px;
+        // grid-template-columns: 1fr 1.5fr;
+        // grid-gap: 50px;
         // flex-direction: row;
         // justify-content: space-between;
         // width: 67%;
     }
 
     .step-one__car-photo-container {
-        display: block;
-        width: 100%;
+        // display: block;
+        // width: 100%;
         // margin-left: 50px;
     }
 }
