--- a/src/css/main.css
+++ b/src/css/main.css
@@ -623,10 +623,10 @@ html {
   width: 55%; }
 
 .step-one__form {
-  width: 45%;
+  width: 100%;
   margin-right: 2%;
   position: relative;
-  margin-top: -130px;
+  margin-top: 0;
   padding: 16px;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
@@ -688,9 +688,9 @@ html {
 @media only screen and (min-width: 768px) {
   .reservation-form__triangle {
     display: block; } }
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .step-one__form {
-    margin-top: 0; } }
+    margin-top: -130px; } }
 .reservation-form__step-two {
   display: grid;
   background-color: var(--color-white); }
