--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -18,10 +18,11 @@
 .step-one__form {
     // display: flex;
     // flex-direction: column;
-    width: 45%;
+    width: 100%;
     margin-right: 2%;
     position: relative;
-    margin-top: -130px;
+    margin-top: 0;
+    
     // left: 320px;
     // top: 300px;
     padding: 16px;
@@ -116,9 +117,9 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
     .step-one__form {
-        margin-top: 0;
+        margin-top: -130px;
     }
 }
 
