--- a/src/css/reservation-form/StepOne.css
+++ b/src/css/reservation-form/StepOne.css
@@ -7,7 +7,7 @@
 
 .step-one__car-photo-container {
   display: none;
-  width: 55%; }
+  width: 100%; }
 
 .step-one__form {
   width: 100%;
@@ -17,15 +17,6 @@
   padding: 16px;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
-
-#root > div > div.home > form > div > div:nth-child(1) > div > div:nth-child(1) > input[type=text], #root > div > div.home > form > div > div:nth-child(1) > div > div:nth-child(2) > input[type=text] {
-  width: 100%;
-  padding: 1.6rem 2rem;
-  margin-bottom: 1rem;
-  border: 1px solid var(--color-input-border);
-  font-size: var(--font-1-6);
-  background-color: var(--color-input-background);
-  border-radius: 6px; }
 
 .reservation-form__triangle {
   display: none;
@@ -77,6 +68,11 @@
     display: block; } }
 @media only screen and (min-width: 768px) {
   .step-one__form {
-    margin-top: -130px; } }
+    width: 43%;
+    margin-top: -130px; }
+
+  .step-one__car-photo-container {
+    display: block;
+    width: 55%; } }
 
 /*# sourceMappingURL=StepOne.css.map */
