--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -63,6 +63,7 @@
 
 .contact-form-group__textarea {
   width: 100%;
+  height: 20rem;
   padding: 1.6rem 2rem;
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
