--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -129,9 +129,9 @@
         grid-gap: 3rem;
     }
 
-    .contact-form-inside-wrapper__contact-left {
-        // width: 50%;
-    }
+    // .contact-form-inside-wrapper__contact-left {
+    //     width: 50%;
+    // }
     
     .contact-form-inside-wrapper__contact-right {
         // width: 50%;
