--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -73,7 +73,7 @@ html {
   align-items: center; }
 
 .navbar-desktop__logo-container {
-  height: 3rem; }
+  height: 4rem; }
 
 .call-btn {
   display: flex;
@@ -124,5 +124,8 @@ html {
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
     padding-right: 4rem; } }
+@media only screen and (min-width: 1440px) {
+  .navbar-desktop__logo-container {
+    height: 4.5rem; } }
 
 /*# sourceMappingURL=NavBar.css.map */
