--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1077,7 +1077,7 @@ html {
   align-items: center; }
 
 .navbar-desktop__logo-container {
-  height: 3rem; }
+  height: 4rem; }
 
 .call-btn {
   display: flex;
@@ -1128,6 +1128,9 @@ html {
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
     padding-right: 4rem; } }
+@media only screen and (min-width: 1440px) {
+  .navbar-desktop__logo-container {
+    height: 4.5rem; } }
 .top {
   position: relative;
   height: 20rem;
