--- a/src/css/main.css
+++ b/src/css/main.css
@@ -665,9 +665,9 @@ html {
 
 .reservation-form__submit-text {
   color: var(--color-white);
-  font-size: 12px; }
+  font-size: 1.6rem; }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 375px) {
   .reservation-form__submit-btn {
     padding: 1.6rem 2rem; }
 
@@ -675,19 +675,25 @@ html {
     margin-top: 0; }
 
   .reservation-form__submit-text {
-    font-size: 15px;
+    font-size: 2rem;
     white-space: nowrap; } }
 @media only screen and (min-width: 768px) {
-  .reservation-form__triangle {
-    display: block; } }
-@media only screen and (min-width: 768px) {
+  .reservation-form__submit-text {
+    font-size: 1.2rem; }
+
   .step-one__form {
     width: 43%;
     margin-top: -130px; }
 
   .step-one__car-photo-container {
     display: block;
-    width: 55%; } }
+    width: 55%; }
+
+  .reservation-form__triangle {
+    display: block; } }
+@media only screen and (min-width: 1024px) {
+  .reservation-form__submit-text {
+    font-size: 1.6rem; } }
 .reservation-form__step-two {
   display: grid;
   background-color: var(--color-white); }
@@ -1093,13 +1099,13 @@ html {
   display: none; }
 
 .call-btn__phone-img-container {
-  height: 1.6rem; }
+  height: 2rem; }
 
 .call-btn__phone-img {
-  height: 1.6rem; }
+  height: 2rem; }
 
 .call-btn__text {
-  font-size: var(--font-1-6);
+  font-size: var(--font-2);
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
