--- a/src/css/components/NavBar.scss
+++ b/src/css/components/NavBar.scss
@@ -63,15 +63,15 @@
 }
 
 .call-btn__phone-img-container {
-    height: 1.6rem;
+    height: 2rem;
 }
 
 .call-btn__phone-img {
-    height: 1.6rem;
+    height: 2rem;
 }
 
 .call-btn__text {
-    font-size: var(--font-1-6);
+    font-size: var(--font-2);
     font-weight: bold;
     color: var(--color-white);
     margin-left: 10px;
