--- a/src/css/main.css
+++ b/src/css/main.css
@@ -449,7 +449,7 @@ html {
     flex-direction: row;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    margin-top: 0; }
+    margin-top: 10rem; }
 
   .about-us-fleet__description {
     width: 50%;
