--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -105,7 +105,7 @@
     flex-direction: row;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    margin-top: 0; }
+    margin-top: 10rem; }
 
   .about-us-fleet__description {
     width: 50%;
