--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -124,7 +124,7 @@
         flex-direction: row;
         padding-top: 8rem;
         padding-bottom: 8rem;
-        margin-top: 0;
+        margin-top: 10rem;
     }
 
     .about-us-fleet__description {
