--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -76,6 +76,10 @@
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px; }
 
+.welcome-without-map__container {
+  width: 100%;
+  background-color: var(--color-blue); }
+
 @media only screen and (min-width: 1024px) {
   .home-content__welcome-container {
     width: 67%;
@@ -107,5 +111,15 @@
     height: 100%;
     width: 100%;
     object-fit: cover; } }
+@media only screen and (min-width: 1024px) and (min-width: 768px) {
+  .welcome-without-map__container {
+    width: 67%;
+    display: flex; }
+
+  .welcome-without-map__content {
+    width: 50%; }
+
+  .welcome-without-map__car-container {
+    width: 50%; } }
 
 /*# sourceMappingURL=Home.css.map */
