Work on WelcomeWithoutMap styling.

--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -117,9 +117,20 @@
     display: flex; }
 
   .welcome-without-map__content {
-    width: 50%; }
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 3rem; }
 
   .welcome-without-map__car-container {
-    width: 50%; } }
+    width: 50%; }
+
+  .welcome-without-map__header {
+    font-size: 3.6rem;
+    padding-bottom: 2rem; }
+
+  .welcome-without-map__text {
+    font-size: 2.2rem; } }
 
 /*# sourceMappingURL=Home.css.map */
