--- a/src/css/pages/Reservation.scss
+++ b/src/css/pages/Reservation.scss
@@ -4,8 +4,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-@media only screen and (min-width: 1024px) {
-
+    margin-top: 10rem;
 }
