--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -112,6 +112,12 @@ html {
   padding-right: 16px;
   white-space: nowrap; }
 
+.navbar-links__navbar-link:hover {
+  background-color: #F6F6F6; }
+
+.navbar-links__navbar-link:focus {
+  background-color: #F6F6F6; }
+
 @media only screen and (min-width: 768px) {
   .call-btn--mobile {
     display: block; } }
@@ -123,7 +129,8 @@ html {
     display: grid; } }
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
-    padding-right: 4rem; } }
+    padding-left: 2rem;
+    padding-right: 2rem; } }
 @media only screen and (min-width: 1440px) {
   .navbar-desktop__logo-container {
     height: 4.5rem; } }
