--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -39,7 +39,8 @@
 .contact-form-inside-wrapper__contact-right {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  padding-top: 1rem; }
 
 .contact-us__header--form {
   margin-bottom: 2rem;
@@ -108,7 +109,8 @@
     grid-gap: 3rem; }
 
   .contact-form-inside-wrapper__contact-right {
-    height: 100%; }
+    height: 100%;
+    padding-top: 1rem; }
 
   .contact-us__contact-form-group--height-100 {
     height: 100%;
