--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -48,6 +48,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding-top: 1rem;
 }
 
 .contact-us__header--form {
@@ -136,6 +137,7 @@
     .contact-form-inside-wrapper__contact-right {
         // width: 50%;
         height: 100%;
+        padding-top: 1rem;
     }
 
     .contact-us__contact-form-group--height-100 {
