--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1114,14 +1114,14 @@ html {
   grid-template-columns: 1fr 1.2fr;
   grid-template-rows: 1fr;
   grid-gap: 10rem;
-  max-width: 1280px;
-  padding-top: 1.6rem;
-  padding-bottom: 1.6rem; }
+  max-width: 1280px; }
 
 .navbar-desktop__navbar-desktop-left {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem; }
 
 .navbar-desktop__logo-container {
   height: 4rem; }
@@ -1166,8 +1166,8 @@ html {
 .navbar-links__navbar-link:hover {
   background-color: #F6F6F6; }
 
-.navbar-links__navbar-link:focus {
-  background-color: #F6F6F6; }
+.navbar-links__navbar-link:active {
+  background-color: #e7e7e7; }
 
 @media only screen and (min-width: 768px) {
   .call-btn--mobile {
@@ -1181,7 +1181,8 @@ html {
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
     padding-left: 2rem;
-    padding-right: 2rem; } }
+    padding-right: 2rem;
+    line-height: 7.2rem; } }
 @media only screen and (min-width: 1440px) {
   .navbar-desktop__logo-container {
     height: 4.5rem; } }
