Fix padding-bottom for about-us-fleet__description.

--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -116,7 +116,7 @@ html {
   background-color: #F6F6F6; }
 
 .navbar-links__navbar-link:active {
-  background-color: #e7e7e7; }
+  background-color: #E7E7E7; }
 
 @media only screen and (min-width: 768px) {
   .call-btn--mobile {
