--- a/src/css/components/NavBar.scss
+++ b/src/css/components/NavBar.scss
@@ -96,7 +96,7 @@
 }
 
 .navbar-links__navbar-link:active {
-    background-color: #e7e7e7;
+    background-color: #E7E7E7;
 }
 
 @media only screen and (min-width: 768px) {
