--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -51,8 +51,7 @@
   margin-top: 3rem; }
 
 .about-us-fleet__description {
-  width: 100%;
-  padding-bottom: 10rem; }
+  width: 100%; }
 
 .about-us-fleet_car-container {
   width: 100%;
@@ -70,6 +69,9 @@
   bottom: -3rem;
   width: 90%; }
 
+@media only screen and (min-width: 400px) {
+  .about-us-fleet__description {
+    padding-bottom: 5rem; } }
 @media only screen and (min-width: 1024px) {
   .about-us {
     margin-top: 0; }
