--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -61,7 +61,6 @@
 
 .about-us-fleet__description {
     width: 100%;
-    padding-bottom: 10rem;
 }
 
 .about-us-fleet_car-container {
@@ -80,6 +79,12 @@
     position: absolute;
     bottom: -3rem;
     width: 90%;
+}
+
+@media only screen and (min-width: 400px) {
+    .about-us-fleet__description {
+        padding-bottom: 5rem;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
