--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -43,6 +43,7 @@
   padding-top: 1rem; }
 
 .contact-us__header--form {
+  margin-left: 0 !important;
   margin-bottom: 2rem;
   color: var(--color-white); }
 
