--- a/src/css/main.css
+++ b/src/css/main.css
@@ -631,7 +631,7 @@ html {
 
   .contact-form-inside-wrapper__contact-right {
     height: 100%;
-    padding-top: 1rem; }
+    padding-top: 0; }
 
   .contact-us__contact-form-group--height-100 {
     height: 100%;
