--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -111,7 +111,7 @@
 
   .contact-form-inside-wrapper__contact-right {
     height: 100%;
-    padding-top: 1rem; }
+    padding-top: 0; }
 
   .contact-us__contact-form-group--height-100 {
     height: 100%;
