--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -138,7 +138,7 @@
     .contact-form-inside-wrapper__contact-right {
         // width: 50%;
         height: 100%;
-        padding-top: 1rem;
+        padding-top: 0;
     }
 
     .contact-us__contact-form-group--height-100 {
