--- a/src/css/main.css
+++ b/src/css/main.css
@@ -516,7 +516,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10rem; }
+  margin-top: 10rem;
+  margin-bottom: 5rem; }
 
 .contact-us {
   position: relative;
