--- a/src/css/pages/Reservation.css
+++ b/src/css/pages/Reservation.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10rem; }
+  margin-top: 10rem;
+  margin-bottom: 5rem; }
 
 /*# sourceMappingURL=Reservation.css.map */
