--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 3rem; }
+  margin-top: 5rem; }
 
 .contact-us__contact-us-content {
   width: 100%; }
@@ -25,7 +25,7 @@
 .contact-us__contact-form {
   margin-top: 2rem;
   padding: 2rem;
-  background-color: var(--color-blue); }
+  background-color: #E3F2F8; }
 
 .contact-form__contact-form-inside-wrapper {
   display: grid;
@@ -103,7 +103,8 @@
 
   .contact-us__contact-form {
     padding: 4rem;
-    border-radius: 6px; }
+    border-radius: 6px;
+    background-color: var(--color-blue); }
 
   .contact-form__contact-form-inside-wrapper {
     grid-template-columns: 1fr 1fr;
