--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -69,7 +69,7 @@
     position: relative;
     height: 157px;
     margin-top: 4rem;
-    margin-bottom: 4rem;
+    // margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
