--- a/src/css/main.css
+++ b/src/css/main.css
@@ -447,6 +447,7 @@ html {
 
 .about-us-fleet__car-img {
   position: absolute;
+  z-index: 2;
   bottom: -3rem;
   width: 90%; }
 
@@ -524,7 +525,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5rem; }
+  padding-top: 5rem;
+  background-color: #E3F2F8; }
 
 .contact-us__contact-us-content {
   width: 100%; }
@@ -565,7 +567,7 @@ html {
 .contact-us__header--form {
   margin-left: 0 !important;
   margin-bottom: 2rem;
-  color: var(--color-white); }
+  color: var(--color-black); }
 
 .contact-form__label {
   display: inline-block;
@@ -607,7 +609,8 @@ html {
 
 @media only screen and (min-width: 1024px) {
   .contact-us {
-    margin-top: 0; }
+    padding-top: 5rem;
+    background-color: #fff; }
 
   .contact-us__contact-us-content {
     width: 67%;
@@ -633,6 +636,9 @@ html {
   .contact-form-inside-wrapper__contact-right {
     height: 100%;
     padding-top: 0; }
+
+  .contact-us__header--form {
+    color: var(--color-white); }
 
   .contact-us__contact-form-group--height-100 {
     height: 100%;
