--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5rem;
+    padding-top: 5rem;
+    background-color: #E3F2F8;
 }
 
 .contact-us__contact-us-content {
@@ -54,7 +55,7 @@
 .contact-us__header--form {
     margin-left: 0 !important;
     margin-bottom: 2rem;
-    color: var(--color-white);
+    color: var(--color-black);
 }
 
 .contact-form__label {
@@ -103,7 +104,8 @@
 
 @media only screen and (min-width: 1024px) {
     .contact-us {
-        margin-top: 0;
+        padding-top: 5rem;
+        background-color: #fff;
     }
 
     .contact-us__contact-us-content {
@@ -140,6 +142,10 @@
         // width: 50%;
         height: 100%;
         padding-top: 0;
+    }
+
+    .contact-us__header--form {
+        color: var(--color-white);
     }
 
     .contact-us__contact-form-group--height-100 {
