Work on highlighting the current page on the Navbar.

--- a/src/css/components/NavBar.scss
+++ b/src/css/components/NavBar.scss
@@ -85,7 +85,7 @@
 
 .navbar-links__navbar-link {
     font-size: var(--font-1-6);
-    color: var(--color-button);
+    // color: var(--color-button);
     text-decoration: underline;
     padding-right: 16px;
     white-space: nowrap;
