--- a/src/css/pages/Reservation.css
+++ b/src/css/pages/Reservation.css
@@ -7,4 +7,8 @@
   margin-top: 10rem;
   margin-bottom: 5rem; }
 
+@media only screen and (min-width: 768px) {
+  .reservation {
+    margin-top: 0; } }
+
 /*# sourceMappingURL=Reservation.css.map */
