--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -117,10 +117,10 @@
         padding-left: 0;
     }
 
-    .about-us__services {
-        // width: 67%;
-        // max-width: 1280px;
-    }
+    // .about-us__services {
+    //     width: 67%;
+    //     max-width: 1280px;
+    // }
 
     .about-us-services__services-container {
         grid-template-columns: 1fr 1fr 1fr;
