Add margin-top to .welcome-without-map__container on the desktop.

--- a/src/css/pages/Home.scss
+++ b/src/css/pages/Home.scss
@@ -150,6 +150,7 @@
     .welcome-without-map__container {
         width: 67%;
         display: flex;
+        margin-top: 4rem;
     }
 
     .welcome-without-map__content {
