--- a/src/css/main.css
+++ b/src/css/main.css
@@ -349,7 +349,8 @@ html {
 
   .welcome-without-map__container {
     width: 67%;
-    display: flex; }
+    display: flex;
+    margin-top: 4rem; }
 
   .welcome-without-map__content {
     width: 40%;
