--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -114,7 +114,8 @@
 
   .welcome-without-map__container {
     width: 67%;
-    display: flex; }
+    display: flex;
+    margin-top: 4rem; }
 
   .welcome-without-map__content {
     width: 40%;
