Change some margins on Home and Reservation pages; Change padding on ReservationForm from 1.6rem to 2.5rem .

--- a/src/css/reservation-form/StepFive.css
+++ b/src/css/reservation-form/StepFive.css
@@ -57,6 +57,9 @@
   .reservation-form__step-five {
     border-radius: 6px; }
 
+  .step-five__inner-container {
+    padding: 2.5rem; }
+
   .step-five__step-five-form {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1.5rem; }
