--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -69,6 +69,10 @@
     .reservation-form__step-five {
         border-radius: 6px;
     }
+
+    .step-five__inner-container {
+        padding: 2.5rem;
+    }
     
     .step-five__step-five-form {
         grid-template-columns: 1fr 1fr;
