--- a/src/css/reservation-form/StepFour.css
+++ b/src/css/reservation-form/StepFour.css
@@ -49,6 +49,9 @@
   .reservation-form__step-four {
     border-radius: 6px; }
 
+  .step-four__inner-container {
+    padding: 2.5rem; }
+
   .step-four__step-four-form {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1.5rem; }
