--- a/src/css/reservation-form/StepFour.scss
+++ b/src/css/reservation-form/StepFour.scss
@@ -65,6 +65,10 @@
     .reservation-form__step-four {
         border-radius: 6px;
     }
+
+    .step-four__inner-container {
+        padding: 2.5rem;
+    }
     
     .step-four__step-four-form {
         grid-template-columns: 1fr 1fr;
