--- a/src/css/main.css
+++ b/src/css/main.css
@@ -350,7 +350,7 @@ html {
   .welcome-without-map__container {
     width: 67%;
     display: flex;
-    margin-top: 4rem; }
+    margin-top: 5rem; }
 
   .welcome-without-map__content {
     width: 40%;
@@ -373,7 +373,7 @@ html {
 
   .welcome-without-map__car-img {
     position: absolute;
-    top: -5rem;
+    top: -3rem;
     right: -15rem; } }
 @media only screen and (min-width: 1024px) {
   .welcome-without-map__header {
@@ -518,7 +518,7 @@ html {
   flex-direction: column;
   align-items: center;
   margin-top: 10rem;
-  margin-bottom: 5rem; }
+  margin-bottom: 8rem; }
 
 @media only screen and (min-width: 768px) {
   .reservation {
@@ -684,7 +684,7 @@ html {
   margin-right: 2%;
   position: relative;
   margin-top: 0;
-  padding: 16px;
+  padding: 1.6rem;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
@@ -739,7 +739,8 @@ html {
 
   .step-one__form {
     width: 43%;
-    margin-top: -130px; }
+    margin-top: -130px;
+    padding: 2.5rem; }
 
   .step-one__car-photo-container {
     display: block;
@@ -759,7 +760,7 @@ html {
   flex-direction: column;
   width: 100%;
   position: relative;
-  padding: 16px;
+  padding: 1.6rem;
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-two__locations {
@@ -787,7 +788,10 @@ html {
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
     grid-template-columns: 1fr 1fr;
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-two__form {
+    padding: 2.5rem; } }
 .reservation-form__step-three {
   display: grid;
   background-color: var(--color-white); }
@@ -831,6 +835,9 @@ html {
   .reservation-form__step-three {
     grid-template-columns: 1fr 1fr;
     border-radius: 6px; }
+
+  .step-three__step-three-container {
+    padding: 2.5rem; }
 
   .step-three__reservation-date-picker-container {
     grid-template-columns: 1fr 1fr;
@@ -903,6 +910,9 @@ html {
   .reservation-form__step-four {
     border-radius: 6px; }
 
+  .step-four__inner-container {
+    padding: 2.5rem; }
+
   .step-four__step-four-form {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1.5rem; }
@@ -969,6 +979,9 @@ html {
 @media only screen and (min-width: 768px) {
   .reservation-form__step-five {
     border-radius: 6px; }
+
+  .step-five__inner-container {
+    padding: 2.5rem; }
 
   .step-five__step-five-form {
     grid-template-columns: 1fr 1fr;
@@ -1037,6 +1050,7 @@ html {
     grid-gap: 2rem; }
 
   .step-six__inner-container {
+    padding: 2.5rem;
     border-radius: 6px; }
 
   .step-six__step-six-footer {
@@ -1053,7 +1067,7 @@ html {
   flex-direction: column;
   width: 100%;
   position: relative;
-  padding: 16px;
+  padding: 1.6rem;
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__thank-you-text {
@@ -1063,7 +1077,10 @@ html {
 @media only screen and (min-width: 768px) {
   .reservation-form__step-seven {
     flex-direction: row;
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-seven__form {
+    padding: 2.5rem; } }
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
