--- a/src/css/reservation-form/StepOne.css
+++ b/src/css/reservation-form/StepOne.css
@@ -14,7 +14,7 @@
   margin-right: 2%;
   position: relative;
   margin-top: 0;
-  padding: 16px;
+  padding: 1.6rem;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
@@ -69,7 +69,8 @@
 
   .step-one__form {
     width: 43%;
-    margin-top: -130px; }
+    margin-top: -130px;
+    padding: 2.5rem; }
 
   .step-one__car-photo-container {
     display: block;
