--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -1,6 +1,4 @@
 .reservation-form__step-one {
-    // display: grid;
-    // grid-template-columns: 1fr;
     display: flex;
     width: 100%;
     max-width: 1280px;
@@ -10,22 +8,15 @@
 
 .step-one__car-photo-container {
     display: none;
-    // width: 500px;
-    // margin-left: 50px;
     width: 100%;
 }
 
 .step-one__form {
-    // display: flex;
-    // flex-direction: column;
     width: 100%;
     margin-right: 2%;
     position: relative;
     margin-top: 0;
-    
-    // left: 320px;
-    // top: 300px;
-    padding: 16px;
+    padding: 1.6rem;
     background-color: var(--color-white);
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
@@ -113,6 +104,7 @@
     .step-one__form {
         width: 43%;
         margin-top: -130px;
+        padding: 2.5rem;
     }
 
     .step-one__car-photo-container {
