--- a/src/css/reservation-form/StepSeven.css
+++ b/src/css/reservation-form/StepSeven.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   width: 100%;
   position: relative;
-  padding: 16px;
+  padding: 1.6rem;
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__thank-you-text {
@@ -18,6 +18,9 @@
 @media only screen and (min-width: 768px) {
   .reservation-form__step-seven {
     flex-direction: row;
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-seven__form {
+    padding: 2.5rem; } }
 
 /*# sourceMappingURL=StepSeven.css.map */
