--- a/src/css/reservation-form/StepSeven.scss
+++ b/src/css/reservation-form/StepSeven.scss
@@ -9,9 +9,7 @@
     flex-direction: column;
     width: 100%;
     position: relative;
-    // left: 320px;
-    // top: 300px;
-    padding: 16px;
+    padding: 1.6rem;
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
@@ -24,5 +22,9 @@
     .reservation-form__step-seven {
         flex-direction: row;
         border-radius: 6px;
+    }
+
+    .step-seven__form {
+        padding: 2.5rem;
     }
 }
