--- a/src/css/reservation-form/StepSix.css
+++ b/src/css/reservation-form/StepSix.css
@@ -53,6 +53,7 @@
     grid-gap: 2rem; }
 
   .step-six__inner-container {
+    padding: 2.5rem;
     border-radius: 6px; }
 
   .step-six__step-six-footer {
