--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -1,6 +1,4 @@
 .reservation-form__step-three {
-    // display: flex;
-    // flex-direction: column;
     display: grid;
     background-color: var(--color-white);
 }
@@ -85,6 +83,10 @@
         // flex-direction: row;
         grid-template-columns: 1fr 1fr;
         border-radius: 6px;
+    }
+
+    .step-three__step-three-container {
+        padding: 2.5rem;
     }
 
     .step-three__reservation-date-picker-container {
