--- a/src/css/reservation-form/StepTwo.css
+++ b/src/css/reservation-form/StepTwo.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   width: 100%;
   position: relative;
-  padding: 16px;
+  padding: 1.6rem;
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-two__locations {
@@ -35,6 +35,9 @@
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
     grid-template-columns: 1fr 1fr;
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .step-two__form {
+    padding: 2.5rem; } }
 
 /*# sourceMappingURL=StepTwo.css.map */
