--- a/src/css/reservation-form/StepTwo.scss
+++ b/src/css/reservation-form/StepTwo.scss
@@ -1,6 +1,4 @@
 .reservation-form__step-two {
-    // display: flex;
-    // flex-direction: column;
     display: grid;
     background-color: var(--color-white);
 }
@@ -10,9 +8,7 @@
     flex-direction: column;
     width: 100%;
     position: relative;
-    // left: 320px;
-    // top: 300px;
-    padding: 16px;
+    padding: 1.6rem;
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
@@ -49,5 +45,9 @@
         // flex-direction: row;
         grid-template-columns: 1fr 1fr;
         border-radius: 6px;
+    }
+
+    .step-two__form {
+        padding: 2.5rem;
     }
 }
