Add box shadow to all steps.

--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -1,6 +1,7 @@
 .reservation-form__step-six {
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
 .step-six__inner-container {
