--- a/src/css/main.css
+++ b/src/css/main.css
@@ -319,7 +319,7 @@ html {
   .home-content__welcome-container {
     width: 67%;
     max-width: 1280px;
-    padding-top: 2rem;
+    padding-top: 6rem;
     padding-bottom: 8rem; }
 
   .welcome-container__general-info {
@@ -740,7 +740,8 @@ html {
   .step-one__form {
     width: 43%;
     margin-top: -130px;
-    padding: 2.5rem; }
+    padding: 2.5rem;
+    box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(0, 0, 0, 0.3); }
 
   .step-one__car-photo-container {
     display: block;
@@ -753,7 +754,8 @@ html {
     font-size: 1.6rem; } }
 .reservation-form__step-two {
   display: grid;
-  background-color: var(--color-white); }
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-two__form {
   display: flex;
@@ -794,7 +796,8 @@ html {
     padding: 2.5rem; } }
 .reservation-form__step-three {
   display: grid;
-  background-color: var(--color-white); }
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-three__step-three-container {
   padding: 1.6rem; }
@@ -861,7 +864,8 @@ html {
     grid-area: submit-right; } }
 .reservation-form__step-four {
   display: grid;
-  grid-template-rows: 1fr 1fr; }
+  grid-template-rows: 1fr 1fr;
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-four__inner-container {
   padding: 1.6rem;
@@ -923,7 +927,8 @@ html {
     align-items: center; } }
 .reservation-form__step-five {
   display: grid;
-  grid-template-rows: 1fr 1fr; }
+  grid-template-rows: 1fr 1fr;
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-five__inner-container {
   padding: 1.6rem;
@@ -997,7 +1002,8 @@ html {
     align-items: center; } }
 .reservation-form__step-six {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-six__inner-container {
   padding: 1.6rem;
@@ -1060,7 +1066,8 @@ html {
 .reservation-form__step-seven {
   display: flex;
   flex-direction: column;
-  background-color: var(--color-white); }
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__form {
   display: flex;
