--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -1,6 +1,7 @@
 .reservation-form__step-five {
     display: grid;
     grid-template-rows: 1fr 1fr;
+    box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
 .step-five__inner-container {
