--- a/src/css/reservation-form/StepOne.css
+++ b/src/css/reservation-form/StepOne.css
@@ -70,7 +70,8 @@
   .step-one__form {
     width: 43%;
     margin-top: -130px;
-    padding: 2.5rem; }
+    padding: 2.5rem;
+    box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(0, 0, 0, 0.3); }
 
   .step-one__car-photo-container {
     display: block;
