--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -105,6 +105,7 @@
         width: 43%;
         margin-top: -130px;
         padding: 2.5rem;
+        box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(0,0,0,.3)
     }
 
     .step-one__car-photo-container {
