--- a/src/css/reservation-form/StepSeven.css
+++ b/src/css/reservation-form/StepSeven.css
@@ -1,7 +1,8 @@
 .reservation-form__step-seven {
   display: flex;
   flex-direction: column;
-  background-color: var(--color-white); }
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-seven__form {
   display: flex;
