--- a/src/css/reservation-form/StepSeven.scss
+++ b/src/css/reservation-form/StepSeven.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-white);
+    box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
 .step-seven__form {
