--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -1,6 +1,7 @@
 .reservation-form__step-three {
   display: grid;
-  background-color: var(--color-white); }
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .step-three__step-three-container {
   padding: 1.6rem; }
