--- a/src/css/reservation-form/StepTwo.scss
+++ b/src/css/reservation-form/StepTwo.scss
@@ -1,6 +1,7 @@
 .reservation-form__step-two {
     display: grid;
     background-color: var(--color-white);
+    box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
 .step-two__form {
@@ -42,7 +43,6 @@
 
 @media only screen and (min-width: 768px) {
     .reservation-form__step-two {
-        // flex-direction: row;
         grid-template-columns: 1fr 1fr;
         border-radius: 6px;
     }
